--- a/package.json
+++ b/package.json
@@ -14,7 +14,9 @@
     "@firebase/auth": "^1.7.0",
     "@firebase/database": "^1.0.4",
     "@firebase/firestore": "^4.5.1",
+    "crypto-js": "^4.2.0",
     "firebase": "^10.10.0",
+    "node-forge": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.22.3"
