--- a/package.json
+++ b/package.json
@@ -14,11 +14,14 @@
     "@firebase/auth": "^1.7.0",
     "@firebase/database": "^1.0.4",
     "@firebase/firestore": "^4.5.1",
+    "@firebase/storage": "^0.12.4",
+    "@react-icons/all-files": "^4.1.0",
     "crypto-js": "^4.2.0",
     "firebase": "^10.10.0",
     "node-forge": "^1.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-icons": "^5.1.0",
     "react-router-dom": "^6.22.3"
   },
   "devDependencies": {
